--- a/src/components/Asistir/Asistir.css
+++ b/src/components/Asistir/Asistir.css
@@ -1,15 +1,27 @@
 .form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     height: 100vh;
+    justify-content: start;
+    align-items: center;
     background-color:transparent ;
     width: 100%;
+}
+.confirmar-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.confirmar-btns{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .imagen-tarjeta {
     height: 500px;
-    width: 100%;
+    width: 50%;
     animation: slideIn 1s ease-in-out;
 }
 
@@ -24,7 +36,14 @@
 
 .input {
     margin-bottom: 10px;
-    width: 60%;
+    width: 200px;
+    height: 50px;
+    border-radius: 20px;
+    border: none;
+    text-align: center;
+    font-size: 24px;
+    margin-top: 10px;
+    font-family: 'Caveat', cursive;
 }
 
 .btn {
@@ -44,16 +63,9 @@
 .form-btn:hover {
     border-bottom: solid 2px #3498db; /* Cambia el color a tu preferencia */
 }
-
-
-
    .tarjet-text {
     position: relative;
-    bottom: 170px;
-    left: 600px;
-    
     width: 700px;
-    overflow: hidden; /* Evita que el contenido exceda del contenedor */
   }
   
   .text {
@@ -86,8 +98,9 @@
     }
     .tarjet-text {
         text-align: left;
-        position: static;
+        
         width: 90%;
+        
        
     }
     .text {
