--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,57 @@
   align-items: center;
   background-color: #eef1ee;
 }
+.welcome-enter {
+  opacity: 0;
+  transform: translateY(-50%);
+}
+
+.welcome-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.welcome-exit {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.welcome-exit-active {
+  opacity: 0;
+  transform: translateY(-50%);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.welcome-message {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
+
+.welcome-text {
+  
+  color: #000;
+  font-size: 40px;
+  transform: translateY(-20px);
+  transition: opacity 500ms, transform 500ms;
+}
+
+.welcome-enter-active .welcome-text,
+.welcome-exit .welcome-text {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
 /* Media query para tablet (entre 600px y 767px) */
 @media only screen and (max-width: 767px) {
  .container{
