--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,17 @@
   width: 50%;
   animation: slideIn 1s ease-in-out;
 }
+.full-screen-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255); /* Un fondo oscuro semi-transparente para destacar el contenedor */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* Otros estilos de tu aplicación */
 
