--- a/src/components/Asistir/Asistir.css
+++ b/src/components/Asistir/Asistir.css
@@ -1,12 +1,4 @@
-.form {
-    display: flex;
-    flex-direction: column;
-   
-    
-    align-items: center;
-    background-color:transparent ;
-    width: 100%;
-}
+
 .confirmar-container{
     display: flex;
     flex-direction: column;
@@ -17,8 +9,27 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+   
 }
 
+.validar-btn2{
+    background: rgb(255, 255, 255);
+    border: hidden;
+    font-size: 24px;
+    border-bottom: solid 2px;
+    cursor: pointer;
+}
+.compartir-whatsapp-btn{
+    cursor: pointer;
+    background:none;
+    border: hidden;
+}
+.wpp-ico{
+    font-size: 80px;
+    color: #4CAF50;
+}
 
 /* Estilo para los botones en estado activo */
 
@@ -27,27 +38,26 @@
     background-color: #4CAF50; /* Color verde para "Si asistiré" */
     color: white;
     transition: .4s;
+    margin-bottom: 20px;
   }
   
   .form-btn.active.no {
     background-color: #FF0000; /* Color rojo para "No asistiré" */
     color: white;
+    margin-bottom: 20px;
     transition: .4s;
   }
   
   .form-btn.active.maybe {
     background-color: #FFA500; /* Color naranja para "Quizás asistiré" */
     color: white;
+    margin-bottom: 20px;
     transition: .4s;
   }
   
  
   /* Estilo para el botón de validar en estado activo */
-  .form-btn.active.ep {
-    background-color: #fff;
-    color: rgb(1, 1, 1);
-    transition: .4s;
-  }
+ 
   
   /* Puedes agregar más estilos específicos para el estado activo según tus necesidades */
   
@@ -75,7 +85,12 @@
 }
 
 .btn {
-    background-color: #3498db;
+    background-color: #db3734;
+    border: hidden;
+    font-size: 24px;
+    color: #fff;
+    padding: 5px;
+    border-radius: 30px;
 }
 
 .form-btn {
@@ -92,7 +107,7 @@
    .tarjet-text {
     position: relative;
     width: 700px;
-    height: 1000px;
+   
   }
   
   .text {
@@ -104,16 +119,11 @@
     opacity: 0; /* Inicialmente oculto */
     animation: fadeIn  forwards; /* Nombre de la animación, duración y retención del último fotograma */
 }
-.mensaje-container{
-    height: 47vh;
-}
+
 .mensaje{
     font-size: 38px;
 }
-.confirmar-container{
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-}
+
 
 @keyframes fadeIn {
     from {
@@ -135,11 +145,7 @@
     }
     .tarjet-text {
         text-align: left;
-        
         width: 90%;
-        
-        
-       
     }
     .text {
         font-size: 34px;
@@ -168,6 +174,7 @@
     .form-btn {
         cursor: pointer;
         font-size: 18px;
+        margin-bottom: 20px;
         margin-bottom: 0px;
         border: hidden;
         background: none;
