--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,15 @@
   background-color: rgba(255, 255, 255, 0.8);
   z-index: 1000;
 }
+.cerrar-btn{
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+  right: 50px;
+  background-color: transparent;
+  border: hidden;
+  color: #fff;
+}
 
 .welcome-text {
   
