--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   
- background-image: url(https://i.pinimg.com/736x/24/e1/f1/24e1f13a6ad72ce218affc9772dd08d9.jpg);
+ background-image: url(https://png.pngtree.com/background/20210715/original/pngtree-beige-floral-line-background-picture-image_1285742.jpg);
  background-position: center;
  background-size: 70vh;
 }
