--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,18 @@
 .container{
   
   background-position: center;
-  height: 100vh;
+  
   display: flex;
   align-items: center;
   
- background-image: url(https://png.pngtree.com/background/20210715/original/pngtree-beige-floral-line-background-picture-image_1285742.jpg);
- background-position: center;
- background-size: 70vh;
+
+ 
+}
+body{
+  background-image: url(https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvdjc4OC1teW50LTgyXzEuanBn.jpg);
+ 
+background-position: center;
+  background-size: 100vh;
 }
 .welcome-enter {
   opacity: 0;
@@ -57,6 +62,7 @@
   background-color: transparent;
   border: hidden;
   color: #fff;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .welcome-text {
@@ -98,8 +104,9 @@
   transition: opacity 300ms, transform 300ms;
 }
 .imagen-tarjeta {
-  height: 500px;
+  height: 300px;
   width: 50%;
+  box-shadow: 0px 0px 20px 10px;
   animation: slideIn 1s ease-in-out;
 }
 .full-screen-container {
@@ -129,7 +136,7 @@
 /* Media query para móvil (menores de 600px) */
 @media only screen and (max-width: 599px) {
   .imagen-tarjeta {
-    height: 300px;
+    height: 250px;
     width: 100%;
     animation: slideIn 1s ease-in-out;
 }
