--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ background-position: center;
   
   color: #000;
   font-size: 10px;
-  transform: translateY(-20px);
+  transform: translateY(-10px);
   transition: opacity 500ms, transform 500ms;
 }
 
@@ -106,7 +106,7 @@ background-position: center;
 .imagen-tarjeta {
   height: 300px;
   width: 50%;
-  box-shadow: 0px 0px 20px 10px;
+ 
   animation: slideIn 1s ease-in-out;
 }
 .full-screen-container {
@@ -115,8 +115,8 @@ background-position: center;
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: 100vh;
- background-image: url(https://i.pinimg.com/originals/5b/59/49/5b5949fa878d061c9f40664550af5020.gif);
+  background-size: 120%;
+ background-image: url(https://i.pinimg.com/originals/05/88/bd/0588bd343e2ccaa043f504ec246f6132.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
